# MLOps

./: .coveragerc  .dockerignore  .gitignore  LICENSE.md  README.md  SPEC.md
misc/api/: README.md
misc/docker/: Dockerfile.alpine  Dockerfile.baseimage  Dockerfile.python  Dockerfile_alpine_glibc  baseimage_swagger_server_run.sh  docker-compose.admin.yml
misc/mlflow/: pyproject.toml
src/: .travis.yml  dev-requirements.txt  pyproject.toml  requirements.txt  requirements_alpine.txt  setup.py  test-requirements.txt  tox.ini
src/aiml/: path_utils.py  utils.py
src/aiml/models/v3/: input_processing.py  model_dl.py  model_events.py  model_xgb.py  models.pickle  models_event_dead.pickle  models_event_dmi30d.pickle  models_imp.pickle  models_xgb.pickle  protocol.py
src/aiml/models/v4/: model_revasc_dl.py  model_revasc_xgb.py  protocol.py  revasc_models.pickle  revasc_models_both_xgb.pickle
src/aiml/pytorch/: save_utils.py
src/aiml/pytorch/outcome/: data_loader.py  model.py  protocol.py
src/aiml/pytorch/revasc/: data_loader.py  model_revasc.py  protocol.py
src/docker/: docker-compose-demo.yml
src/docker/v4.0.2/: Dockerfile  Dockerfile.mlflow  docker-compose.yml
src/swagger_server/: __main__.py  config.json  config.yaml  config_v3.json  config_v4.json  util.py
src/swagger_server/controllers/: inference_controller.py  inference_protocol.py  model_controller.py
src/swagger_server/models/: __init__.py  category.py  inference_feature.py  inference_result.py  model.py  patient_record.py  troponin.py
src/swagger_server/swagger/: swagger.yaml  swagger_v4.yaml
src/swagger_server/test/: __init__.py  test_cases.csv  test_expectations.py  test_inference_controller.py  tester.py
src/swagger_server/test/requests/: api_health_check.http  api_predict_all.http  postman.AIML.json  postman.HeartAI.json
(+13 files in other folders)
