[tool.poetry]
name = "test mlflow"
version = "0.1.0"
description = "test"
authors = ["Andriy Butenko <andriy.butenko@student.adelaide.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^1.25.1"
dvc = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
